adding js model

--- a/webapp/index.html
+++ b/webapp/index.html
@@ -6,6 +6,8 @@
     <title>Document</title>
     <script src="./js/opencv.js" async onload="openCvReady()"></script>
     <script src="./js/utils.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@2.0.0/dist/tf.min.js"></script>
+
 </head>
 <body>
     <video id="cam_input" height="480" width="640"></video>
